--- a/schedule.css
+++ b/schedule.css
@@ -1,219 +1,30 @@
-@font-face {
-    font-family: "simple_thread";
-    src: url(Simplethread.otf);
-}
-
-.logo {
-    width: 120px;
-    height: 120px;
-    float: left;
-    margin-top: 0px;
-
-    /* Needs to make alternative home button */
-    /*Ref to url */
-}
-
-.username {
-    font-style: italic;
-    font-size: 25px;
-    font-weight: bold;
-    text-align: center;
-    color: rgb(158, 116, 60);
-    margin-bottom: .5px;
-    /*Demo subtitle */
-}
-
-.socialdes {
-    text-align: center;
-    font-size: 18px;
-    color: rgb(158, 116, 60);
-    margin-top: 0px;
-}
-
-.name {
-    font-family: "simple_thread", sans-serif;
-    text-align: center;
-    color: rgb(180, 35, 35);
-    font-size: 50px;
-    background: white;
-    font-weight: 800;
-    margin-bottom: 0px;
-    /*Needs to be in the center after screen expand */
-}
-
-body {
-    background: rgb(255, 255, 255);
-}
-
-.Description {
-    text-align: center;
-    color: rgb(193, 92, 92);
-    font-size: 20px;
-    font-weight: 600;
-    margin-top: 0px;
-}
-
-.buttondiv {
-    display: block;
-    text-align: right;
-    background: dodgerblue;
-    /*Needs work on borders */
-    /*Create url and next page*/
-
-}
-
-.home {
-    font-size: 1rem;
-    font-weight: 600;
-    padding: 1rem 1rem;
-    text-transform: uppercase;
-    border: 0;
-    /*BORDER change for all other button*/
-}
-
-.home--secondary {
-    background: dodgerblue;
-    color: white;
-}
-
-.home--secondary:hover {
-    background: rgb(6, 108, 209);
-}
-
-.schedule {
-    font-size: 1rem;
-    font-weight: 600;
-    padding: 1rem 1rem;
-    text-transform: uppercase;
-    border: 0;
-    /*Set url, next page*/
-}
-
-.schedule--secondary {
-    background: dodgerblue;
-    color: white;
-}
-
-.schedule--secondary:hover {
-    background: rgb(6, 108, 209);
-}
-
-.direction {
-    font-size: 1rem;
-    font-weight: 600;
-    padding: 1em 1rem;
-    text-transform: uppercase;
-    border: 0;
-    /*Border work and url*/
-}
-
-.direction--secondary {
-    background: dodgerblue;
-    color: white;
-}
-
-.direction--secondary:hover {
-    background: rgb(6, 108, 209);
-}
-
-.contact {
-    font-size: 1rem;
-    font-weight: 600;
-    padding: 1rem 1rem;
-    text-transform: uppercase;
-    border: 0;
-    /*Url and next page*/
-    /*Border work*/
-}
-
-.contact--secondary {
-    background: dodgerblue;
-    color: white;
-}
-
-.contact--secondary:hover {
-    background: rgb(6, 108, 209);
-}
-
-.codeconduct {
-    font-size: 1rem;
-    font-weight: 600;
-    padding: 1rem 1rem;
-    text-transform: uppercase;
-    border: 0;
-}
-
-.codeconduct--secondary {
-    background: dodgerblue;
-    color: white;
-}
-
-.codeconduct--secondary:hover {
-    background: rgb(6, 108, 209);
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-nav {}
-
-ul {}
-
-ul li {
-    list-style: none;
-    display: inline-block;
-
-}
-
-ul li a {
-    display: block;
-    text-decoration: none;
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-}
-
 .firstPara {
     padding: 10px;
     text-align: center;
-    font-size: 20px;
+    font-size: 14px;
+}
+
+.bottom {
+    padding: 20px;
 }
 
 /*table design*/
 .table {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     width: 100%;
 }
 
 /*first raw design*/
 .firstRaw {
     background-color: grey;
-    width: 100;
+    width: 100%;
+    font-size: 14px;
 }
 
 /*second raw*/
 .secondRaw {
     background-color: lightgrey;
     align-items: center;
-    width: 100;
-}
-
-.InfoName {
-    font-size: 30px;
-    color: rgb(165, 162, 162);
-    background: rgb(85, 85, 78);
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
-.ForBack {
-    background: rgb(85, 85, 78);
-}
-
-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
+    font-size: 14px;
 }
