--- a/contact.css
+++ b/contact.css
@@ -59,6 +59,10 @@
     font-size: 16px;
 }
 
+.gender input {
+    cursor: pointer;
+}
+
 .phone input {
     padding: 10px;
     font-weight: 500;
@@ -70,6 +74,7 @@
     height: 39px;
     width: 30%;
     margin-top: 28px;
+    cursor: pointer;
 }
 
 .input [type=text],
@@ -82,4 +87,18 @@ textarea {
     margin: 12px;
     padding: 10px;
     border-radius: 5px;
+}
+
+.button {
+    padding: 10px;
+}
+
+.submit {
+    padding: 10px;
+    display: block;
+    background: rgb(180, 35, 35);
+    font-weight: 600;
+    font-size: 14px;
+    color: white;
+    cursor: pointer;
 }
