--- a/index.css
+++ b/index.css
@@ -21,24 +21,60 @@
 * {
     box-sizing: border-box;
     text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    display: flex;
+    list-style: none;
+}
+
+ul li {
+    margin: 1px;
+}
+
+ul li a {
+    text-decoration: none;
+    font-size: 20px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
 
 .row {
-    width: 90%;
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 20px;
+    grid-gap: 20px; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
-.column {
-    height: auto;
-    width: 25%;
+.column3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.image {
+    width: 300px;
+}
+
+.btn {
+    text-align: right;
+    margin: 10px 1.5px;
     position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    background: rgb(168, 131, 10);
+    color: rgb(0, 0, 0);
 }
 
+/*
 .imagebutton {
-    height: 150px;
-    width: 150px;
+    width: 250px;
 }
 
 .soccerback {
@@ -53,3 +89,5 @@
     display: inline-block;
     padding: 10px 20px;
 }
+
+*/
