--- a/hockey.css
+++ b/hockey.css
@@ -1,13 +1,12 @@
 img.wrap {
     float: left;
     width: 400px;
-    -webkit-shape-outside: url(pngegg.png);
-    shape-outside: url(pngegg.png);
+    -webkit-shape-outside: url(Shuttle.png);
+    shape-outside: url(Shuttle.png);
 }
 
 .title {
     font-size: 40px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: 500;
-    text-align: center;
 }
