--- a/index.css
+++ b/index.css
@@ -1,21 +1,17 @@
+body {
+    z-index: 0;
+}
+
+.sararesponsive {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .desPara1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding-left: 15px;
-    font-size: 12px;
-}
-
-.soccer {
-    width: 95%;
-    height: 450px;
-    float: center;
-    padding: 10px;
-    /*Gap setting and centered picture*/
-}
-
-.para1 {
-    font-size: 18px;
-    text-align: center;
-    padding: 1rem;
+    font-size: 14px;
 }
 
 * {
@@ -25,69 +21,18 @@
     padding: 0;
 }
 
-ul {
-    display: flex;
-    list-style: none;
-}
-
-ul li {
-    margin: 1px;
-}
-
-ul li a {
-    text-decoration: none;
-    font-size: 20px;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
-
-.row {
-    /* display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 20px; */
+.row1 {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    margin: 10px;
 }
 
-.column3 {
+.column1 {
     display: flex;
+    margin: 10px;
     flex-direction: column;
     justify-content: space-between;
+    filter: drop-shadow(2px 0px 2px #8c8b8b);
 }
-
-.image {
-    width: 300px;
-}
-
-.btn {
-    text-align: right;
-    margin: 10px 1.5px;
-    position: relative;
-    display: inline-block;
-    padding: 10px 20px;
-    background: rgb(168, 131, 10);
-    color: rgb(0, 0, 0);
-}
-
-/*
-.imagebutton {
-    width: 250px;
-}
-
-.soccerback {
-    width: 200px;
-    height: 200px;
-}
-
-.allbuttons {
-    text-align: right;
-    margin: 10px 1.5px;
-    position: relative;
-    display: inline-block;
-    padding: 10px 20px;
-}
-
-*/
