--- a/navigation.css
+++ b/navigation.css
@@ -1,144 +1,15 @@
-/* @font-face {
-    font-family: "simple_thread";
-    src: url(Simplethread.otf);
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.logo {
-    width: 120px;
-    height: 120px;
-    float: left;
-    margin-top: 0px;
-
-   
-}
-
-.username {
-    font-style: italic;
-    font-size: 25px;
-    font-weight: bold;
-    text-align: center;
-    color: rgb(158, 116, 60);
-    margin-bottom: .5px;
-    
-}
-
-.socialdes {
-    text-align: center;
-    font-size: 18px;
-    color: rgb(158, 116, 60);
-    margin-top: 0px;
-}
-
-.name {
-    font-family: "simple_thread", sans-serif;
-    text-align: center;
-    color: rgb(180, 35, 35);
-    font-size: 50px;
-    background: white;
-    font-weight: 800;
-    margin-bottom: 0px;
-    
-}
-
-.Description {
-    text-align: center;
-    color: rgb(193, 92, 92);
-    font-size: 20px;
-    font-weight: 600;
-    margin-top: 0px;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    width: 100%;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-ul {
-    text-align: right;
-}
-
-ul li {
-    list-style: none;
-    display: inline-block;
-}
-
-ul li a {
-    display: block;
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-}
-
-ul li a :hover {
-    background: rgb(6, 108, 209);
-}
-
-.navigation {
-    background: dodgerblue;
-    display: block;
-    padding: 5px;
-}
-
-.navigation button {
-    font-weight: 600;
-    text-transform: uppercase;
-    border: 2px solid white;
-    border-radius: 5px;
-}
-
-.navigation button :hover {
-    background-color: rgb(6, 108, 209);
-    border: 0 solid;
-    border-radius: 5px;
-}
-
-.navigation a {
-    background-color: dodgerblue;
-    padding: 1rem 1rem;
-    font-size: 16px;
-    margin: auto;
-}
-
-
-
-@media (max-width: 900px) {
-    .navigation {
-        display: flex;
-        border: 1px solid red;
-        flex-direction: column;
-
-
-    }
-} */
-
 @font-face {
     font-family: "simple_thread";
     src: url(Simplethread.otf);
 }
 
+.sararesponsive {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -146,12 +17,10 @@ ul li a :hover {
 }
 
 .logo {
-    width: 120px;
-    height: 120px;
+    width: 140px;
+    height: 140px;
     float: left;
     margin-top: 0px;
-
-
 }
 
 .username {
@@ -161,7 +30,6 @@ ul li a :hover {
     text-align: center;
     color: rgb(158, 116, 60);
     margin-bottom: .5px;
-
 }
 
 .socialdes {
@@ -179,7 +47,6 @@ ul li a :hover {
     background: white;
     font-weight: 800;
     margin-bottom: 0px;
-
 }
 
 .Description {
@@ -189,7 +56,6 @@ ul li a :hover {
     font-weight: 600;
     margin-top: 0px;
 }
-
 
 nav {
     height: 80px;
@@ -197,9 +63,8 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0px 50px 0px 50px;
+    padding: 0px 30px 0px 30px;
 }
-
 
 nav ul {
     display: flex;
@@ -210,15 +75,18 @@ nav ul li {
     margin: 0.5px;
 }
 
-
 nav ul li a {
     color: #FFFFFF;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 20px;
     letter-spacing: 1px;
-    padding: 8px 10px;
+    padding: 27px 13px;
     border-radius: 5px;
     transition: all 0.3s ease;
+}
+
+nav ul li a:hover {
+    background: rgb(35, 98, 161);
 }
 
 #cl {
@@ -229,9 +97,8 @@ nav .hd i {
     display: none;
 }
 
-
 .name2 {
-    font-size: 10px;
+    font-size: 30px;
     font-family: Futura;
     color: #FFFFFF;
     padding: 5px;
@@ -247,14 +114,19 @@ nav .hd i {
         width: 100%;
         left: -100%;
         text-align: center;
-        top: 80px;
+        top: 0px;
+        z-index: 9;
+    }
+
+    #bars:checked~.hd i:before {
+        content: "\f00d";
     }
 
     #cl:checked~ul {
         left: 0;
     }
 
-    hd i {
+    .hd i {
         display: block;
     }
 
@@ -273,4 +145,18 @@ nav .hd i {
         cursor: pointer;
         display: block;
     }
+}
+
+.soccer {
+    width: 95%;
+    height: auto;
+    float: center;
+    padding: 10px;
+    /*Gap setting and centered picture*/
+}
+
+.para1 {
+    font-size: 18px;
+    text-align: center;
+    padding: 1rem;
 }
